portal-dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-dev

spec:
  entryPoints:
    - websecure
  tls:
    secretName: portal-dev-tls
  routes:
    - kind: Rule
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      match: Host(`portal-dev.trapti.tech`) && !Path(`/.well-known/acme-challenge/{path:.*}`) && (PathPrefix(`/api/`) || PathPrefix(`/.well-known/`) || Path(`/activate`))
      priority: -99
      services:
        - namespace: portal-dev
          kind: Service
          name: portal-dev-backend
          port: 8101
          scheme: http
          weight: 1
    - kind: Rule
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      match: Host(`portal-dev.trapti.tech`) && !Path(`/.well-known/acme-challenge/{path:.*}`)
      priority: -100
      services:
        - namespace: portal-dev
          kind: Service
          name: portal-dev-frontend
          port: 8100
          scheme: http
          weight: 1
